--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav > a {
     justify-content: center;
     align-items: center;
     padding: 18px 42px;
-    height: 49px;;
+    height: 49px;
 }
 
 nav > a > img {
@@ -68,7 +68,6 @@ nav > div {
 }
 
 .controlsMargin{
-    height: 100%;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -90,119 +89,83 @@ nav > div {
 }
 
 .menuBurguer {
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     padding: 20px;
+    visibility: hidden;
 }
 
 @media screen and (max-width: 560px) {
     .menuBurguer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        visibility: visible;
     }
 
     nav > ul {
         display: none;
     }
 }
-/* 
-nav > a{
-    height: 49px;
-    width: auto;
-    padding: 18px 42px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-nav > a > img {
-    width: 30px;
-    height: 30px;
-}
+/* *************************************************** */
 
-nav > ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-nav > ul > li{
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    height: auto;
-    padding: 18.5px 7.9px 15.5px;
-}
-
-li > button{
-    color: black;
-    border: 0px;
-    font-family: "ABeeZee", sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.controlsMargin{
-    display: flex;
-    background-color: #EEEEEE;
-    justify-content: end;
-    align-items: center;
-    flex-grow: 1;
-    padding-right: 52px;
-    min-width: 193.77px;
-    height: 49px;
-}
-
-.controlsMargin > div {
-    display: flex;
-    height: 100%;
-}
-
-.controlsMargin > div > button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 0px;
-    padding: 20px;
-    background-color: #EEEEEE;
-}
-
-button > img{
-    width: 21px;
-    height: 16px;
-}
-
-.hero{
-    background-image: url("./src/img/portada.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 550px;
-    gap: 10px;
-}
-
-.hero > .headings{
+.hero {
     position: relative;
-    width: fit-content;
-    top: 100px;
-    left: 50px;
+    width: 100%;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
 }
 
-.headings > h1{
+.hero img {
+    width: 100%;
+    height: auto;
+    display: block;
+    grid-area: 1 / 1 / 3 / 3;
+}
+
+/* Texto superpuesto */
+.headings {
+    grid-area: 1 / 1 / 2 / 2;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: start;
+    padding-left: 5%;
+    color: white;
+}
+
+.headings h1 {
     font-family: "Abhaya Libre", serif;
-    width: fit-content;
+    font-size: 70px;
     font-weight: 400;
     font-style: normal;
     color: white;
-    font-size: 70px;
 }
 
-.headings > h4{
+.headings h2 {
     color: white;
     font-family: "ABeeZee", serif;
-    width: fit-content;
     font-weight: 400;
     font-style: normal;
     font-size: 16px;
-} */
+}
+
+@media screen and (max-width: 770px){
+    .headings {
+        grid-area: 2 / 1 / 3 / 2;
+        justify-content: end;
+        padding-bottom: 5%;
+    }
+
+    .headings h1 {
+        font-size: 24px;
+    }
+
+    .headings h2 {
+        font-size: 14px;
+    }
+}
