--- a/ProyectoLandingPage/style.css
+++ b/ProyectoLandingPage/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Abhaya+Libre:wght@400;500;600;700;800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+:root{
+    --fontAbhaya: "Abhaya Libre";
+    --ABeeZee: "ABeeZee";
+}
 
 * {
     margin: 0;
@@ -49,7 +53,7 @@ li > button{
     border: 0px;
     padding: 18.5px 7.9px 15.5px;
     color: black;
-    font-family: "ABeeZee", sans-serif;
+    font-family: var(--ABeeZee, "serif");
     font-size: 12px;
     font-weight: 400;
     font-style: normal;
@@ -97,7 +101,7 @@ nav > div {
     visibility: hidden;
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 580px) {
     .menuBurguer {
         visibility: visible;
     }
@@ -148,7 +152,7 @@ nav > div {
 
 .headings h2 {
     color: white;
-    font-family: "ABeeZee", serif;
+    font-family: var(--ABeeZee, "serif");
     font-weight: 400;
     font-style: normal;
     font-size: 16px;
@@ -187,19 +191,17 @@ nav > div {
     flex-direction: column;
     border-radius: 20px;
     background-color: #D9D9D9;
-    font-family: 'ABeeZee', sans-serif;
+    font-family: var(--ABeeZee, "serif");
 }
 
 .cardTitles{
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding-bottom: 10px;
 }
 
-.card img{
-    width: 100%;
-}
 
 .cardTitles > h2{
     font-size: 30px;
@@ -214,8 +216,12 @@ nav > div {
     padding: 20px 20px 20px 0;
 }
 
+.card img{
+    width: 100%;
+}
+
 .moreInfo{
-    font-family: 'ABeeZee', sans-serif;
+    font-family: var(--ABeeZee, "serif");
     font-size: 12px;
     font-weight: 400;
     border-radius: 45px;
@@ -280,6 +286,7 @@ nav > div {
 @media screen and (max-width: 850px) {
     .cardsSection{
         grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
     }
 }
 
@@ -289,11 +296,137 @@ nav > div {
         gap: 8px;
     }
 
+    .cardTitles{
+        align-items: center;
+        padding: 0;
+    }
+
+    .cardTitles > h4{
+        padding: 0;
+    }
+
     .colorButtons{
         display: none;
     }
 
     .cardButtons{
         justify-content: center;
+        padding: 0;
+    }
+}
+
+/* *************************************************** */
+.textoMedio{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    padding: 40px;
+}
+
+.textoMedio h2{
+    font-family: var(--fontAbhaya, "serif");
+    font-weight: 400;
+    font-style: normal;
+    font-size: 5em;
+}
+
+.textoMedio > p{
+    width: 100%;
+    padding-right: 60%;
+    font-family: var(--ABeeZee, "serif");
+    font-weight: 400;
+    font-size: 1.5em;
+    font-style: normal;
+}
+
+@media screen and (max-width: 800px){
+    .textoMedio{
+        align-items: center;
+        padding: 20px;
+    }
+    .textoMedio h2{
+        text-align: center;
+        font-size: 4em;
+    }
+    .textoMedio > p{
+        padding: 0;
+        text-align: center;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width:700px){
+    .textoMedio h2{
+        font-size: 40px;
+    }
+}
+
+/* *************************************************** */
+.sectionMap{
+    width: 100%;
+    height: 790px;
+    background-image: url("./src/img/fondoMapa.png");
+    background-size: cover;
+    background-position: center;
+    padding: 40px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.sectionMap > div{
+    display: flex;
+    width: 465px;
+    height: 275px;
+    max-width: 465px;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(162, 162, 162, 0.51);
+    color: rgba(255, 255, 255, 1);
+    padding: 17px 35px;
+    border-radius: 14px;
+}
+
+.sectionMap h4{
+    padding-bottom: 20px;
+    font-family: var(--ABeeZee, "serif");
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 50px;
+    line-height: 50px;
+    letter-spacing: 0%;
+    vertical-align: middle;
+    margin-bottom: 10px;
+}
+
+.sectionMap button{
+    padding: 21px 31px;
+    background-color: white;
+    color: black;
+    border-radius: 80px;
+    width: 254px;
+    height: 51px;
+    border: 1px solid rgba(20, 22, 21, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 550px) {
+    .sectionMap{
+        height: fit-content;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .sectionMap > div{
+        padding: 22px 18px;
+        align-items: center;
+    }
+
+    .sectionMap h4{
+        text-align: center;
+        font-size: 36px;
     }
 }
