--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ nav > div {
     padding: 12px 23px;
     background-color: white;
     border: 0;
+    cursor: pointer;
 }
 
 .cardButtons{
@@ -249,6 +250,7 @@ nav > div {
     height: 33px;
     border-radius: 50%;
     border: 2px solid white;
+    cursor: pointer;
 }
 
 .select{
@@ -411,6 +413,7 @@ nav > div {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 550px) {
@@ -428,5 +431,61 @@ nav > div {
     .sectionMap h4{
         text-align: center;
         font-size: 36px;
+    }
+}
+
+/* *************************************************** */
+.overflowSection{
+    display: flex;
+    overflow-x: auto;
+    padding: 40px;
+    align-items: center;
+    justify-content: space-between;
+    gap: 60px;
+}
+
+.overCard{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+    width: 500px;
+    height: 400px;
+    flex-shrink: 0;
+    padding: 40px 30px;
+    background-color: #D9D9D9;
+}
+
+.overflowSection > div img{
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+
+.overCard h2{
+    font-family: var(--ABeeZee, "serif");
+    font-weight: 400;
+    font-style: normal;
+    font-size: 30px;
+}
+
+@media screen and (max-width: 600px){
+    .overflowSection{
+        padding: 20px;
+        gap: 20px;
+    }
+
+    .overCard{
+        width: 310px;
+        height: 340px;
+        padding: 20px 15px;
+        align-items: center;
+    }
+
+    .overCard img{
+        height: 140px;
     }
 }
