--- a/style.css
+++ b/style.css
@@ -435,30 +435,59 @@ nav > div {
 }
 
 /* *************************************************** */
+.overflowWrapper {
+    padding: 40px;
+    overflow: hidden;
+}
+
 .overflowSection{
     display: flex;
     overflow-x: auto;
-    padding: 40px;
     align-items: center;
     justify-content: space-between;
     gap: 60px;
+    padding-bottom: 20px;
 }
+
+/* Hecho con IA para generar el efecto en el scrollbar que hay en el figma */
+.overflowSection::-webkit-scrollbar {
+  height: 10px;
+}
+
+.overflowSection::-webkit-scrollbar-track {
+  background: #e0e0e0;
+  border-radius: 10px;
+}
+
+.overflowSection::-webkit-scrollbar-thumb {
+  background: #b5b5b5;
+  border-radius: 10px;
+  border: 2px solid #e0e0e0;
+}
+
+.overflowSection::-webkit-scrollbar-thumb:hover {
+  background: #9a9a9a;
+}
+
+/* hasta aquí lo hecho con IA */
+
 
 .overCard{
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: space-between;
-    width: 500px;
-    height: 400px;
+    width: 550px;
+    height: 450px;
     flex-shrink: 0;
-    padding: 40px 30px;
+    padding: 30px;
     background-color: #D9D9D9;
+    gap: 20px;
 }
 
 .overflowSection > div img{
     width: 100%;
-    height: 180px;
+    height: 250px;
     object-fit: cover;
     object-position: center;
 }
@@ -473,8 +502,10 @@ nav > div {
 }
 
 @media screen and (max-width: 600px){
-    .overflowSection{
+    .overflowWrapper {
         padding: 20px;
+    }
+    .overflowSection{
         gap: 20px;
     }
 
@@ -487,5 +518,81 @@ nav > div {
 
     .overCard img{
         height: 140px;
+    }
+}
+
+/* *************************************************** */
+.cocheRojo{
+    width: 100%;
+    height: 800px;
+    background-image: url("./src/img/cocherojo.png");
+    background-size: cover;
+    background-position: center;
+}
+
+.cocheRojo > div{
+    display: flex;
+    width: fit-content;
+    height: 204px;
+    flex-direction: column;
+    justify-content: center;
+    color: rgba(255, 255, 255, 1);
+    position: relative;
+    top: 525px;
+    left: 160px;
+}
+
+.cocheRojo h4{
+    padding-bottom: 10px;
+    font-family: var(--ABeeZee, "serif");
+    font-weight: 400;
+    font-style: normal;
+    font-size: 50px;
+    color: white;
+}
+
+.cocheRojo p{
+    font-family: var(--ABeeZee, "serif");
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    color: white;
+    max-width: 310px;
+    padding-right: 31px;
+}
+
+.cocheRojo > img{
+    width: 100%;
+    height: auto;
+    display: none;
+}
+
+@media screen and (max-width: 690px) {
+    .cocheRojo {
+        height: fit-content;
+        background-image: none;
+    }
+    .cocheRojo > img{
+        display: block;
+    }
+    .cocheRojo > div{
+        position: static;
+        margin-top: 20px;
+        align-items: center;
+        text-align: left;
+        background-color: #EEEEEE;
+        padding: 20px;
+        margin-top: 0;
+        width: 100%;
+    }
+
+    .cocheRojo h4{
+        color: black;
+        font-size: 20px;
+    }
+
+    .cocheRojo p{
+        color: black;
+        padding: 0;
     }
 }
