--- a/ProyectoLandingPage/style.css
+++ b/ProyectoLandingPage/style.css
@@ -596,3 +596,127 @@ nav > div {
         padding: 0;
     }
 }
+
+/* *************************************************** */
+.ruedaSection{
+    width: 100%;
+    height: 800px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    background-color: #FFFFFF;
+    padding: 90px 42px;
+}
+
+.ruedaSection > img{
+    width: auto;
+    height: 100%;
+    min-width: 540px;
+    grid-area: 1 / 2 / 3 / 3;
+    justify-self: end;
+    align-self: center;
+}
+
+/* .ruedaSection > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    height: 100%;
+    padding: 0 120px 0 30px;
+    gap: 30px;
+    flex-shrink: 1;
+    min-width: 300px;
+} */
+
+.ruedaSection h4{
+    padding-bottom: 20px;
+    font-family: var(--ABeeZee, "serif");
+    font-weight: 400;
+    font-style: normal;
+    font-size: 50px;
+    justify-self: center;
+    align-self: end;
+}
+
+.ruedaSection > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 30px;
+    min-width: 300px;
+    justify-self: start;
+    align-self: flex-start;
+}
+
+.ruedaSection p{
+    font-family: var(--ABeeZee, "serif");
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    max-width: 400px;
+    padding-right: 31px;
+}
+
+.ruedaSection button{
+    background-color: #FFFFFF;
+    border: 0;
+    padding: 11px 1px;
+    border-radius: 80px;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1024px){
+    .ruedaSection{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, auto);
+        height: fit-content;
+        padding: 40px 20px;
+    }
+
+    .ruedaSection > img{
+        grid-area: 2 / 1 / 3 / 2;
+        width: 100%;
+        height: auto;
+        min-width: auto;
+        justify-self: center;
+        align-self: center;
+        margin-top: 20px;
+        border-radius: 15px;
+    }
+
+    .ruedaSection > h4{
+        text-align: center;
+        padding: 0;
+    }
+
+    .ruedaSection > div{
+        justify-self: center;
+        align-self: center;
+        text-align: center;
+    }
+
+    .ruedaSection p{
+        padding: 0;
+        text-align: left;
+    }
+
+    .ruedaSection button{
+        justify-self: center;
+        align-self: center;
+    }
+
+    .ruedaSection h4{
+        font-size: 32px;
+    }
+}
+
+@media screen and (max-width: 350px){
+    .ruedaSection{
+        padding: 10px;
+    }
+}
